--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,3 +41,12 @@ jobs:
         run: bundle exec rake --rakefile Rakefile_ci -T | grep release
       - name: Verify gem builds
         run: gem build *.gemspec
+
+  tests:
+    needs:
+      - rubocop
+      - test
+    runs-on: ubuntu-latest
+    name: Test suite
+    steps:
+      - run: echo Test suite completed
