--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Run tests
         run: bundle exec rake --rakefile Rakefile_ci -T | grep release
       - name: Verify gem builds
-        run: gem build *.gemspec
+        run: gem build --strict --verbose *.gemspec
 
   tests:
     needs:
