--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,7 +41,9 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
       - name: check that required tasks are available
-        run: bundle exec rake --rakefile Rakefile_ci -T | grep --regexp 'rake strings' --regexp 'rake release' --quiet
+        run: |
+          bundle exec rake --rakefile Rakefile_ci -T '^strings:generate:reference$' | grep --quiet .
+          bundle exec rake --rakefile Rakefile_ci -T '^release$' | grep --quiet .
       - name: Verify gem builds
         run: gem build --strict --verbose *.gemspec
 
