CI: Output bundler environment
This makes it easier to debug Ruby failures. We introduced this in gha-puppet:

https://github.com/voxpupuli/gha-puppet/commit/fcf484bf4280d8d80b4a55999d122e81089640bc

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,6 +44,8 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
+      - name: Display Ruby environment
+        run: bundle env
       - name: check that required tasks are available
         run: |
           bundle exec rake --rakefile Rakefile_ci -T '^strings:generate:reference$' | grep --quiet .
