--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,12 +34,7 @@ jobs:
         shell: bash
         env:
           GH_TOKEN: ${{ github.token }}
-        run: gh release create ${{ github.ref_name }} --generate-notes
-      - name: Attach gem to GitHub Release
-        shell: bash
-        env:
-          GH_TOKEN: ${{ github.token }}
-        run: gh release upload ${{ github.ref_name }} *.gem
+        run: gh release create ${{ github.ref_name }} *.gem --generate-notes
 
   release-to-github:
     needs: build-release
